force-app/main/default/objects/Business_Hours__c/Business_Hours__c.object-meta.xml
<CustomObject>
    <description>Hours of business available for scheduling Donors</description>
    <label>Business Hours</label>
    <nameField>
        <label>Business Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>