force-app/main/default/objects/Business_Hours__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Hours</relationshipLabel>
    <relationshipName>Business_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>