force-app/main/default/objects/Business_Hours__c/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <description>Closing time</description>
    <label>Close</label>
    <type>Time</type>
</CustomField>