force-app/main/default/objects/Business_Hours__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>1-based index of Days of Week</description>
    <label>Index</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>