force-app/main/default/objects/Business_Hours__c/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <description>Open time</description>
    <label>Open</label>
    <type>Time</type>
</CustomField>