force-app/main/default/objects/Business_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Center__c</columns>
    <columns>NAME</columns>
    <columns>Index__c</columns>
    <columns>isClosed__c</columns>
    <columns>Open__c</columns>
    <columns>Close__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>